add opens by detault to the java agent string